# myscio-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/application/use_cases/: documents.py  prompt.py
app/core/: firebase.py  generatives_ai.py  logger.py  security.py  session.py  settings.py
app/domain/repositories/vectordb/: repository.py
app/infrastructure/dependency_injector/: container.py
app/infrastructure/documents/: doc_handler.py  exceptions.py
app/infrastructure/external_services/gemini/: gemini_client.py
app/infrastructure/repositories/: chroma_repository.py
app/interfaces/api/: __init__.py  ai_router.py  auth_router.py  auth_schemas.py  document_schemas.py  documents_router.py  health_router.py  routes.py
app/resources/: document.txt
app/scripts/: gemini_api_experiment.py
docker/: docker-compose.yml
