[project]
name = "rag_project"
authors = [
    { name = "Rafael" },
]
version = "0.1.0"
description = "A FastAPI project + UV"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi[standard]>=0.115.3",
    "uvicorn>=0.34.0",
    "chromadb>=1.3.0",
    "pydantic-settings>=2.10.0",
    # Google Gemini SDK e integração
    "langchain==0.3.7",
    "langchain-core==0.3.17",
    "langchain-community==0.3.7",
    "google-generativeai==0.8.3",
    "langchain-google-genai==2.0.7",
    "dependency-injector>=4.48.2",
]
